fix: scrollbar colour in right click menus

--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -138,7 +138,7 @@ div[class^="layerContainer"] {
 
 	// scrollbars
 	--scrollbar-thin-thumb: #{$brand};
-	--scrollbar-thin-track: #{$crust};
+	--scrollbar-thin-track: #{$mantle};
 	--scrollbar-auto-thumb: #{$brand};
 	--scrollbar-auto-track: #{$mantle};
 	--scrollbar-auto-scrollbar-color-track: #{$brand};
